fix qsl arrows line wrap

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -273,7 +273,8 @@ thead > tr > td {
 }
 
 TD.eqsl {
-	width: 35px;
+	width: 33px;
+	white-space: nowrap;
 }
 
 .eqsl-green {
@@ -287,7 +288,8 @@ TD.eqsl {
 }
 
 TD.qsl {
-	width: 35px;
+	width: 33px;
+	white-space: nowrap;
 }
 
 .qsl-green {
@@ -311,7 +313,8 @@ TD.qsl {
 }
 
 TD.qrz {
-	width: 35px;
+	width: 33px;
+	white-space: nowrap;
 }
 
 .qrz-green {
@@ -325,7 +328,8 @@ TD.qrz {
 }
 
 TD.lotw {
-	width: 35px;
+	width: 33px;
+	white-space: nowrap;
 }
 
 .lotw-green {
